GNOME Bugzilla – Bug 755586
nautilus-file-operations: Don't free gettext() strings
Last modified: 2015-10-06 17:13:47 UTC
Downstream bug with stacktrace: https://bugzilla.redhat.com/show_bug.cgi?id=1263449 nautilus-file-operations.c in line 1552/1553 frees strings that have been returned by ngettext(). Not a good idea!
Created attachment 312748 [details] [review] file-operations: don't free ngettext strings Pointed by Mathias.
Didn't know that Attachment 312748 [details] pushed as 5c9f68d - file-operations: don't free ngettext strings