file-operations: don't free ngettext strings

Pointed by Mathias.

https://bugzilla.gnome.org/show_bug.cgi?id=755586